samples/_failures_safe/1761560587_b17178_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e3e6c20.c: In function ‘main’:
./samples/SAFE/__tmp_3e3e6c20.c:152:24: error: missing terminating " character
  152 |                 printf("
      |                        ^
./samples/SAFE/__tmp_3e3e6c20.c:152:17: error: expected expression at end of input
  152 |                 printf("
      |                 ^~~~~~
./samples/SAFE/__tmp_3e3e6c20.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3e3e6c20.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3e3e6c20.c:152:17: error: expected declaration or statement at end of input
